# DroneWatch

./: .dockerignore  .gitignore  404.html  Cargo.toml  Dockerfile  LICENSE  Makefile  PROJECT_PLAN.md  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
configs/: config.yaml  debug.yaml  easy_train_config.yaml  evaluate.yaml  random_policy.yaml  tune_ppo.yaml
configs/env/: swarm_search_v1.yaml
configs/evaluation/: debug.yaml  eval_default.yaml
configs/logging/: mlflow_local.yaml
configs/model/: ppo_feedforward.yaml  ppo_lstm.yaml
configs/paths/: default.yaml
configs/random_policy/: debug.yaml  default.yaml
configs/rendering/: default.yaml
configs/training/: debug.yaml  local_ppo.yaml  tune_ppo.yaml
configs/tune/: ray_tune.yaml
configuration/: index.html
docs/: configuration.md  getting-started.md  index.md  reference-links.md  results.md  rust-environment.md  training-pipeline.md  troubleshooting.md
docs/javascripts/: mermaid.js
getting-started/: index.html
reference-links/: index.html
results/: index.html
rust-environment/: index.html
rust/swarm_sim/: Cargo.toml  pyproject.toml
rust/swarm_sim/src/: agent.rs  config.rs  coverage.rs  geometry.rs  lib.rs  main.rs  metrics.rs  obstacle.rs  scenario.rs  target.rs  world.rs
scripts/: random_policy.py  run_rust_rollout.py
search/: search_index.json
src/dronewatch/: __init__.py  sim.py
src/dronewatch/baselines/: __init__.py  random_policy.py
src/dronewatch/config/: __init__.py  loader.py  schema.py
src/dronewatch/envs/: __init__.py  observation_builder.py  reward.py  spaces.py  swarm_search_env.py
src/dronewatch/evaluation/: __init__.py  evaluate.py  reporting.py
src/dronewatch/logging/: __init__.py  mlflow_logger.py
src/dronewatch/rendering/: __init__.py  frame.py  render_episode.py
src/dronewatch/training/: __init__.py  _progress.py  callbacks.py  rllib_config.py  train_ppo.py  tune_ppo.py  utils.py
tests/python/: test_config_loading.py  test_env_reset.py  test_env_step.py  test_evaluation_rendering.py  test_evaluation_reporting.py  test_mlflow_logger.py  test_observations.py  test_pydantic_models.py  test_random_policy.py  test_rewards.py  test_rllib_config.py  test_rust_import.py  test_rust_simulation.py  test_standalone_config_clis.py  test_train_ppo.py  test_training_callbacks.py  test_tune_ppo.py
training-pipeline/: index.html
troubleshooting/: index.html
