[project]
name = "dronewatch"
version = "0.1.0"
description = "A MARL engineering showcase for cooperative drone swarm target discovery."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Maarten Bussler" }
]
keywords = ["reinforcement-learning", "multi-agent", "simulation", "rust", "pyo3"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
]
dependencies = []

[dependency-groups]
dev = [
  "maturin>=1.7,<2.0",
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["src"]
