[project]
name = "dronewatch"
version = "0.1.0"
description = "A MARL engineering showcase for cooperative drone swarm target discovery."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Maarten Bussler" }
]
keywords = ["reinforcement-learning", "multi-agent", "simulation", "rust", "pyo3"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
]
dependencies = [
  "gymnasium>=0.29,<1.1",
  "matplotlib>=3.8,<4.0",
  "numpy>=1.26,<3.0",
  "pillow>=10.0,<12.0",
  "pydantic>=2.0,<3.0",
  "ray[rllib]>=2.9,<3.0",
]

[dependency-groups]
dev = [
  "maturin>=1.7,<2.0",
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["src"]
